@@ -1,3 +1,8 @@
+2004-09-25  Hasso Tepper  <hasso at estpak.ee>
+
+	* ospf6_asbr.c, ospf6_lsa.c, ospf6_proto.c, ospf6_proto.h: Fix
+	compiler warnings.
+
 2004-09-23 Hasso Tepper <hasso at quagga.net>
 
 	* *.[c|h]: list -> struct list *, listnode -> struct listnode *.
